--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+
+      - name: Build with Maven
+        run: mvn clean package
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -24,9 +32,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t trip-calculate .
-          docker tag trip-calculate ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
+          docker build -t trip-planner .
+          docker tag trip-planner ${{ secrets.DOCKER_USERNAME }}/trip-planner:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/trip-planner:latest
 
   deploy:
     needs: build
@@ -44,10 +52,11 @@ jobs:
       - name: Deploy to Oracle Cloud
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          ORACLE_INSTANCE_IP: ${{ secrets.ORACLE_INSTANCE_IP }}
         run: |
-          ssh -i private_key ubuntu@your-instance-ip << EOF
-            docker pull $DOCKER_USERNAME/trip-calculate:latest
-            docker stop trip-calculate-container || true
-            docker rm trip-calculate-container || true
-            docker run -d -p 8080:8080 --name trip-calculate-container $DOCKER_USERNAME/trip-calculate:latest
+          ssh -i private_key ubuntu@$ORACLE_INSTANCE_IP << EOF
+            docker pull $DOCKER_USERNAME/trip-planner:latest
+            docker stop trip-planner-container || true
+            docker rm trip-planner-container || true
+            docker run -d -p 8080:8080 --name trip-planner-container $DOCKER_USERNAME/trip-planner:latest
           EOF
