--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin' # Or another distribution of your choice
+          distribution: 'temurin'
           java-version: '17'
 
       - name: Build with Maven
@@ -33,9 +33,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t trip-planner .
-          docker tag trip-planner ${{ secrets.DOCKER_USERNAME }}/trip-planner:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/trip-planner:latest
+          docker build -t trip-calculate .
+          docker tag trip-calculate ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
 
   deploy:
     needs: build
@@ -56,8 +56,8 @@ jobs:
           ORACLE_INSTANCE_IP: ${{ secrets.ORACLE_INSTANCE_IP }}
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$ORACLE_INSTANCE_IP << EOF
-            sudo docker pull $DOCKER_USERNAME/trip-planner:latest
-            sudo docker stop trip-planner-container || true
-            sudo docker rm trip-planner-container || true
-            sudo docker run -d -p 8080:8080 --name trip-planner-container $DOCKER_USERNAME/trip-planner:latest
+            sudo docker pull $DOCKER_USERNAME/trip-calculate:latest
+            sudo docker stop trip-calculate-container || true
+            sudo docker rm trip-calculate-container || true
+            sudo docker run -d -p 8080:8080 --name trip-calculate-container $DOCKER_USERNAME/trip-calculate:latest
           EOF
