--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,5 +59,5 @@ jobs:
             sudo docker pull $DOCKER_USERNAME/trip-calculate:latest
             sudo docker stop trip-calculate-container || true
             sudo docker rm trip-calculate-container || true
-            sudo docker run -d -p 8080:8080 --name trip-calculate-container $DOCKER_USERNAME/trip-calculate:latest
+            sudo docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped $DOCKER_USERNAME/trip-calculate:latest
           EOF
