Fixed the deploy.yml logic 4

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,10 @@ jobs:
 
       - name: Build and push Docker image
         run: |
+          echo "Building the Docker image..."
           docker build -t trip-calculate .
           docker tag trip-calculate ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
+          echo "Pushing the Docker image..."
           docker push ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
 
   deploy:
@@ -64,7 +66,9 @@ jobs:
             sudo docker rm trip-calculate-container || true
 
             echo "Running the new container..."
-            echo "Running command: sudo docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped \"$DOCKER_USERNAME/trip-calculate:latest\""
             sudo docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped "$DOCKER_USERNAME/trip-calculate:latest"
+
+            echo "Checking running container..."
+            sudo docker ps -a
             echo "Deployment complete."  
           EOF
