--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,34 @@
 spring.application.name=TripPlanner
 
-# H2 Database Configuration
+# Server configuration
+server.port=8080
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# CRITICAL: These lines eliminate the malicious request log spam
+logging.level.org.apache.coyote.http11.Http11Processor=ERROR
+logging.level.org.springframework.web.servlet.mvc.support.DefaultHandlerExceptionResolver=ERROR
+logging.level.org.springframework.boot.autoconfigure.web.servlet.WelcomePageHandlerMapping=ERROR
+logging.level.com.zaxxer.hikari.pool.HikariPool=ERROR
 
-# JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+# Your app logs
+logging.level.com.tripplanner.TripPlanner=INFO
+logging.level.root=WARN
 
-# H2 Console Configuration
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# HikariCP optimizations to prevent thread starvation warnings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.leak-detection-threshold=60000
+
+# Tomcat optimizations to handle malicious requests better
+server.tomcat.max-connections=8192
+server.tomcat.accept-count=100
+server.tomcat.max-threads=200
+server.tomcat.min-spare-threads=10
+server.tomcat.connection-timeout=20000
+
+# Better error handling
+server.error.whitelabel.enabled=false
+server.error.include-message=never
+server.error.include-binding-errors=never
