Update Security Configuration. Add custom filters.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 spring.application.name=TripPlanner
 
+
 # Server configuration
 server.port=8080
 
-# CRITICAL: These lines eliminate the malicious request log spam
+# Security logging - IMPORTANT!
+logging.level.SECURITY=WARN
+logging.level.com.tripplanner.TripPlanner.exception.GlobalExceptionHandler=INFO
+
+# Disable Thymeleaf error template
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.thymeleaf.ThymeleafAutoConfiguration
+spring.thymeleaf.enabled=false
+
+# Reduce noise from malicious requests
 logging.level.org.apache.coyote.http11.Http11Processor=ERROR
 logging.level.org.springframework.web.servlet.mvc.support.DefaultHandlerExceptionResolver=ERROR
 logging.level.org.springframework.boot.autoconfigure.web.servlet.WelcomePageHandlerMapping=ERROR
@@ -13,7 +22,12 @@ logging.level.com.zaxxer.hikari.pool.HikariPool=ERROR
 logging.level.com.tripplanner.TripPlanner=INFO
 logging.level.root=WARN
 
-# HikariCP optimizations to prevent thread starvation warnings
+# Security: Disable unnecessary features
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+management.endpoints.enabled-by-default=false
+
+# HikariCP optimizations
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=20000
@@ -21,14 +35,16 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.leak-detection-threshold=60000
 
-# Tomcat optimizations to handle malicious requests better
+# Tomcat security optimizations
 server.tomcat.max-connections=8192
 server.tomcat.accept-count=100
 server.tomcat.max-threads=200
 server.tomcat.min-spare-threads=10
 server.tomcat.connection-timeout=20000
 
-# Better error handling
+# Enhanced security
 server.error.whitelabel.enabled=false
 server.error.include-message=never
 server.error.include-binding-errors=never
+server.error.include-stacktrace=never
+server.error.include-exception=false
