--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,19 @@
-name: Deploy to Oracle Cloud
+name: Deploy Application
 
 on:
   push:
     branches:
       - feature
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Choose deployment environment'
+        required: true
+        default: 'oracle-cloud'
+        type: choice
+        options:
+        - oracle-cloud
+        - lxc-container
 
 jobs:
   build:
@@ -11,10 +21,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -23,10 +33,10 @@ jobs:
         run: mvn clean package
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -39,13 +49,14 @@ jobs:
           echo "Pushing the Docker image..."
           docker push ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
 
-  deploy:
+  deploy-oracle:
+    if: github.event.inputs.environment == 'oracle-cloud' || (github.event_name == 'push' && github.event.inputs.environment == '')
     needs: build
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Decode SSH key
         run: |
@@ -70,5 +81,39 @@ jobs:
 
             echo "Checking running container..."
             sudo docker ps -a
-            echo "Deployment complete."  
+            echo "Deployment to Oracle Cloud complete."  
+          EOF
+
+  deploy-lxc:
+    if: github.event.inputs.environment == 'lxc-container'
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Decode SSH key for LXC
+        run: |
+          echo "${{ secrets.LXC_SSH_KEY_BASE64 }}" | base64 -d > lxc_private_key
+          chmod 600 lxc_private_key
+
+      - name: Deploy to LXC Container
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        run: |
+          ssh -o StrictHostKeyChecking=no -i lxc_private_key root@tripcalculate.local << 'EOF'
+            echo "Pulling the latest Docker image..."
+            docker pull $DOCKER_USERNAME/trip-calculate:latest
+
+            echo "Stopping and removing the existing container..."
+            docker stop trip-calculate-container || true
+            docker rm trip-calculate-container || true
+
+            echo "Running the new container..."
+            docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped "$DOCKER_USERNAME/trip-calculate:latest"
+
+            echo "Checking running container..."
+            docker ps -a | grep trip-calculate
+            echo "Deployment to LXC container complete."
           EOF
