--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,118 +2,74 @@ name: Deploy Application
 
 on:
   push:
-    branches:
-      - feature
+    branches: [ master, feature ]
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Choose deployment environment'
+        description: 'Deploy target'
         required: true
         default: 'oracle-cloud'
         type: choice
-        options:
-        - oracle-cloud
-        - lxc-container
+        options: [ oracle-cloud, lxc-container ]
+
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Build with Maven
-        run: mvn clean package
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with: { distribution: temurin, java-version: '17' }
+      - run: mvn -q -DskipTests package
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        run: |
-          echo "Building the Docker image..."
-          docker build --no-cache -t trip-calculate .
-          docker tag trip-calculate ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
-          echo "Pushing the Docker image..."
+      - run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/trip-calculate:latest
 
   deploy-oracle:
-    if: github.event.inputs.environment == 'oracle-cloud' || (github.event_name == 'push' && github.event.inputs.environment == '')
+    if: |
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'oracle-cloud') ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/master') ||
+      (github.event_name == 'push' && github.ref != 'refs/heads/feature')
     needs: build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Decode SSH key
-        run: |
-          echo "${{ secrets.ORACLE_CLOUD_KEY_BASE64 }}" | base64 -d > private_key
-          chmod 600 private_key
-
-      - name: Deploy to Oracle Cloud
-        env:
+      - uses: actions/checkout@v4
+      - run: echo "${{ secrets.ORACLE_CLOUD_KEY_BASE64 }}" | base64 -d > private_key && chmod 600 private_key
+      - env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           ORACLE_INSTANCE_IP: ${{ secrets.ORACLE_INSTANCE_IP }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$ORACLE_INSTANCE_IP << EOF
-            echo "Pulling the latest Docker image..."
-            sudo docker pull $DOCKER_USERNAME/trip-calculate:latest
-
-            echo "Stopping and removing the existing container..."
-            sudo docker stop trip-calculate-container || true
-            sudo docker rm trip-calculate-container || true
-
-            echo "Running the new container..."
-            sudo docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped "$DOCKER_USERNAME/trip-calculate:latest"
-
-            echo "Checking running container..."
-            sudo docker ps -a
-            echo "Deployment to Oracle Cloud complete."  
-          EOF
+          ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$ORACLE_INSTANCE_IP "DOCKER_USERNAME='${DOCKER_USERNAME}' bash -s" <<'REMOTE'
+            docker pull "${DOCKER_USERNAME}/trip-calculate:latest"
+            docker stop trip-calculate-container || true
+            docker rm   trip-calculate-container || true
+            docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped "${DOCKER_USERNAME}/trip-calculate:latest"
+            docker ps -a | grep trip-calculate || true
+          REMOTE
 
   deploy-lxc:
-    if: github.event.inputs.environment == 'lxc-container'
+    if: |
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'lxc-container') ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/feature')
     needs: build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Decode SSH key for LXC
-        run: |
-          echo "${{ secrets.LXC_SSH_KEY_BASE64 }}" | base64 -d > lxc_private_key
-          chmod 600 lxc_private_key
-
-      - name: Deploy to LXC Container
-        env:
+      - uses: actions/checkout@v4
+      - run: echo "${{ secrets.LXC_SSH_KEY_BASE64 }}" | base64 -d > lxc_key && chmod 600 lxc_key
+      - env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          LXC_HOST: ${{ secrets.LXC_HOST }} # e.g., tripcalculate.local or IP
         run: |
-          ssh -o StrictHostKeyChecking=no -i lxc_private_key root@tripcalculate.local << 'EOF'
-            echo "Pulling the latest Docker image..."
-            docker pull $DOCKER_USERNAME/trip-calculate:latest
-
-            echo "Stopping and removing the existing container..."
+          ssh -o StrictHostKeyChecking=no -i lxc_key root@$LXC_HOST "DOCKER_USERNAME='${DOCKER_USERNAME}' bash -s" <<'REMOTE'
+            command -v docker >/dev/null || curl -fsSL https://get.docker.com | sh
+            docker pull "${DOCKER_USERNAME}/trip-calculate:latest"
             docker stop trip-calculate-container || true
-            docker rm trip-calculate-container || true
-
-            echo "Running the new container..."
-            docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped "$DOCKER_USERNAME/trip-calculate:latest"
-
-            echo "Checking running container..."
-            docker ps -a | grep trip-calculate
-            echo "Deployment to LXC container complete."
-          EOF
+            docker rm   trip-calculate-container || true
+            docker run -d -p 8080:8080 --name trip-calculate-container --restart unless-stopped "${DOCKER_USERNAME}/trip-calculate:latest"
+            docker ps -a | grep trip-calculate || true
+          REMOTE
