Add email configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -112,3 +112,14 @@ server.error.include-message=never
 server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 server.error.include-exception=false
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${GMAIL_USERNAME}
+spring.mail.password=${GMAIL_APP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Admin email for notifications
+app.admin.email=${ADMIN_EMAIL}
