--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -142,6 +142,9 @@ jobs:
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
           OAUTH_REDIRECT_URI: ${{ secrets.OAUTH_REDIRECT_URI }}
+          GMAIL_USERNAME: ${{ secrets.GMAIL_USERNAME }}        
+          GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+          ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }} 
         run: |
           ssh -i ~/.ssh/tripcalc_deploy_key ubuntu@$LXC_HOST "DOCKER_USERNAME='${DOCKER_USERNAME}' DATABASE_URL='${DATABASE_URL}' DATABASE_USERNAME='${DATABASE_USERNAME}' DATABASE_PASSWORD='${DATABASE_PASSWORD}' GOOGLE_CLIENT_ID='${GOOGLE_CLIENT_ID}' GOOGLE_CLIENT_SECRET='${GOOGLE_CLIENT_SECRET}' OAUTH_REDIRECT_URI='${OAUTH_REDIRECT_URI}' bash -s" <<'REMOTE'
             docker pull "${DOCKER_USERNAME}/trip-calculate:latest"
@@ -156,6 +159,9 @@ jobs:
               -e GOOGLE_CLIENT_ID="${GOOGLE_CLIENT_ID}" \
               -e GOOGLE_CLIENT_SECRET="${GOOGLE_CLIENT_SECRET}" \
               -e OAUTH_REDIRECT_URI="${OAUTH_REDIRECT_URI}" \
+              -e GMAIL_USERNAME="${GMAIL_USERNAME}" \       
+              -e GMAIL_APP_PASSWORD="${GMAIL_APP_PASSWORD}" \
+              -e ADMIN_EMAIL="${ADMIN_EMAIL}" \
               "${DOCKER_USERNAME}/trip-calculate:latest"
             docker ps -a | grep trip-calculate || true
           REMOTE
