--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.31.0",
     "@tailwindcss/vite": "^4.1.17",
     "@types/leaflet": "^1.9.21",
     "axios": "^1.12.2",
