--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -7,8 +7,8 @@ VITE_API_URL=
 VITE_MAPBOX_TOKEN=your_mapbox_token_here
 
 # AI Features (Optional)
-# n8n Webhook URL for AI chat assistant
-VITE_N8N_WEBHOOK_URL=https://n8n.gojoble.online/webhook-test/route-planner-ai
+# NOTE: N8N webhook URL is now configured in backend environment variables for security
+# See backend .env for N8N_WEBHOOK_URL configuration
 
-# Google Gemini API Key for trip insights
+# Google Gemini API Key for trip insights (currently not used - n8n handles AI)
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
