--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -37,3 +37,25 @@ logging.level.com.tripplanner=INFO
 # Actuator - Limited endpoints in production
 management.endpoints.web.exposure.include=health,prometheus
 management.endpoint.health.show-details=when-authorized
+
+# ========================================
+# AI Configuration (Production)
+# ========================================
+# Cache implementation: Use Redis for production
+spring.cache.type=redis
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${PROD_REDIS_PASSWORD:}
+spring.cache.redis.time-to-live=86400000
+
+# Redis connection pool configuration (Lettuce)
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=2
+spring.data.redis.lettuce.pool.max-wait=-1ms
+
+# Logging: Production level for AI services
+logging.level.com.tripplanner.TripPlanner.filter.AiRateLimitingFilter=INFO
+logging.level.com.tripplanner.TripPlanner.service.AiCacheService=INFO
+logging.level.com.tripplanner.TripPlanner.service.AiUsageService=INFO
+logging.level.com.tripplanner.TripPlanner.controller.AiInsightsController=INFO
