--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -33,3 +33,16 @@ logging.level.org.springframework.security=DEBUG
 # Actuator
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
+
+# ========================================
+# AI Configuration (Staging)
+# ========================================
+# Cache implementation: Use in-memory cache for staging
+spring.cache.type=simple
+ai.cache.implementation=memory
+
+# Logging: More verbose for staging
+logging.level.com.tripplanner.TripPlanner.filter.AiRateLimitingFilter=DEBUG
+logging.level.com.tripplanner.TripPlanner.service.AiCacheService=DEBUG
+logging.level.com.tripplanner.TripPlanner.service.AiUsageService=DEBUG
+logging.level.com.tripplanner.TripPlanner.controller.AiInsightsController=DEBUG
