--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -149,3 +149,24 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Admin email for notifications
 app.admin.email=${ADMIN_EMAIL}
+
+# ========================================
+# AI Configuration (N8N Webhook & Rate Limiting)
+# ========================================
+# N8N webhook URL (moved from frontend to backend for security)
+n8n.webhook.url=${N8N_WEBHOOK_URL:}
+n8n.timeout.seconds=30
+
+# AI Rate Limiting Configuration
+ai.ratelimit.unauthenticated.hourly=5
+ai.ratelimit.unauthenticated.daily=20
+ai.ratelimit.authenticated.hourly=10
+ai.ratelimit.authenticated.daily=50
+
+# AI Caching Configuration
+ai.cache.ttl.hours=24
+ai.cache.max.size=500
+
+# AI Monitoring Alerts
+ai.alert.daily.threshold=1000
+ai.alert.error.rate.threshold=0.1
