fix(redis): correct environment variable name and initialize connection factory
Two critical fixes for Redis authentication:

1. Fixed environment variable mismatch:
   - application-prod.properties was looking for PROD_REDIS_PASSWORD
   - But Docker container passes REDIS_PASSWORD
   - This caused password to be empty, resulting in NOAUTH errors

2. Added afterPropertiesSet() call to LettuceConnectionFactory:
   - Ensures connection factory is properly initialized
   - Required when manually creating factory with custom client config

These fixes resolve:
- NOAUTH Authentication required
- Unable to connect to Redis errors

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -45,7 +45,7 @@ management.endpoint.health.show-details=when-authorized
 spring.cache.type=redis
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6379}
-spring.data.redis.password=${PROD_REDIS_PASSWORD:}
+spring.data.redis.password=${REDIS_PASSWORD:}
 spring.cache.redis.time-to-live=86400000
 
 # Redis connection pool configuration (Lettuce)
