feat: update AI rate limits for beta testing phase
  - Increase authenticated user limits to 20/min, 400/hr, 1500/day
  - Add per-minute tracking to prevent burst abuse
  - Add hourly usage monitoring and statistics logging
  - Update configuration for easy scaling

  Optimized for 7 beta testers with room to scale to 50-100 users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -160,16 +160,48 @@ n8n.timeout.seconds=30
 # N8N Endpoints
 n8n.extractor.url=${N8N_EXTRACTOR_URL:}
 
-# AI Rate Limiting Configuration
-ai.ratelimit.unauthenticated.hourly=5
-ai.ratelimit.unauthenticated.daily=20
-ai.ratelimit.authenticated.hourly=10
-ai.ratelimit.authenticated.daily=50
+# ========================================
+# AI Rate Limiting Configuration - Beta Testing Phase
+# ========================================
+# Strategy: Aggressive limits optimized for 7 beta testers
+# Backend: GPT-4o-mini-nano (10k RPD, 500 RPM, 200k TPM)
+# Effective bottleneck: ~80 req/min (200k TPM ÷ 2.5k tokens/req)
+#
+# Access: /api/ai/** endpoints require authentication + beta tester approval
+# Expected concurrent users: 2-4 (not all 7 simultaneously)
+#
+# Beta Tester Limits (Authenticated Users):
+#   - Allows rapid testing and extensive exploration
+#   - Scales gracefully as user base grows
+#   - When scaling to 50-100 users, reduce to: 10/min, 150/hour, 500/day
 
+# Authenticated (Beta Testers) - AGGRESSIVE for testing
+ai.ratelimit.authenticated.minute=20
+ai.ratelimit.authenticated.hourly=400
+ai.ratelimit.authenticated.daily=1500
+
+# Unauthenticated (IP-based) - CONSERVATIVE to prevent abuse
+# Note: /api/ai/** requires auth, so these limits rarely apply
+ai.ratelimit.unauthenticated.minute=3
+ai.ratelimit.unauthenticated.hourly=10
+ai.ratelimit.unauthenticated.daily=30
+
+# Premium/Admin Tier - FUTURE USE (not yet implemented)
+# For privileged users with higher quota needs
+ai.ratelimit.premium.minute=30
+ai.ratelimit.premium.hourly=600
+ai.ratelimit.premium.daily=2000
+
+# ========================================
 # AI Caching Configuration
+# ========================================
 ai.cache.ttl.hours=24
 ai.cache.max.size=500
 
-# AI Monitoring Alerts
-ai.alert.daily.threshold=1000
+# ========================================
+# AI Monitoring & Alerts
+# ========================================
+# Alert when total daily requests approach API quota
+ai.alert.daily.threshold=8000
+# Alert when error rate exceeds this percentage (0.1 = 10%)
 ai.alert.error.rate.threshold=0.1
